--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Playfair:wght@400;600&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
