--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,body,#root,.app{
+  height: 100%;
+  background-color: #010026;
+  @apply text-white
+}
